1. forms.py - added 2. urls.py - mapped add_page, add_category 4. views.py - added add_category() and add_page()

--- a/templates/Rango/about.html
+++ b/templates/Rango/about.html
@@ -13,5 +13,6 @@
 <img src="{% static 'images/rangos_girlfriend.jpg' %}" alt="Emily">
 <p>here are my cats</p>
 <img src="{{ MEDIA_URL }}cats.jpg" alt="my cats">
+<a href="{% url 'rango:index' %}">Back to the Main Page</a>
 </body>
 </html>
