--- a/templates/Rango/category.html
+++ b/templates/Rango/category.html
@@ -20,7 +20,8 @@
     {% else %}
         <strong>The specified category does not exist!</strong>
     {% endif %}
-    <a href="/rango/">Back to the Main Page</a>
+    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
+    <a href="{% url 'rango:index' %}">Back to the Main Page</a>
 </div>
 </body>
 </html>
