--- a/templates/Rango/about.html
+++ b/templates/Rango/about.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
+{% extends 'Rango/base.html' %}
 {% load staticfiles %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
-<h1>About Rango</h1>
-<p>Hey there! This is me. Really cute!</p>
-<img src="{% static 'images/author_pic.jpg' %}" alt="author's pic">
-<p>and this is my Emily. Love her!</p>
-<img src="{% static 'images/rangos_girlfriend.jpg' %}" alt="Emily">
-<p>here are my cats</p>
-<img src="{{ MEDIA_URL }}cats.jpg" alt="my cats">
-<a href="{% url 'rango:index' %}">Back to the Main Page</a>
-</body>
-</html>
+{% block title %}About Rango{% endblock %}
+{% block body_block %}
+    <h1>About Rango</h1>
+    <strong>Last visit: {{ last_visit }}</strong>
+    <p>Hey there! This is me. Really cute!</p>
+    <img src="{% static 'images/author_pic.jpg' %}" alt="author's pic">
+    <p>and this is my Emily. Love her!</p>
+    <img src="{% static 'images/rangos_girlfriend.jpg' %}" alt="Emily">
+    <p>here are my cats</p>
+    <img src="{{ MEDIA_URL }}cats.jpg" alt="my cats">
+{% endblock %}
