--- a/templates/Rango/add_category.html
+++ b/templates/Rango/add_category.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'Rango/base.html' %}
+{% block title %}Add Category{% endblock %}
+{% block body_block %}
     <h1>Add a Category</h1>
     <div>
         <form id="category_form" action="{% url 'rango:add_category' %}" method="post">
@@ -23,5 +16,4 @@
             <input type="submit" name="submit" value="Create Category">
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
