--- a/templates/Rango/add_page.html
+++ b/templates/Rango/add_page.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'Rango/base.html' %}
+{% block title %}Add Page{% endblock %}
+{% block body_block %}
 <div>
     {% if category %}
         <h1>Add Page</h1>
@@ -27,5 +20,4 @@
         <strong>A Category doesn't exist!</strong>
     {% endif %}
 </div>
-</body>
-</html>
+{% endblock %}
