--- a/templates/Rango/category.html
+++ b/templates/Rango/category.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'Rango/base.html' %}
+{% block title %}{{ category.name }}{% endblock %}
+{% block body_block %}
 <div>
     {% if category %}
         <h1>{{ category.name }}</h1>
@@ -20,8 +16,8 @@
     {% else %}
         <strong>The specified category does not exist!</strong>
     {% endif %}
-    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
-    <a href="{% url 'rango:index' %}">Back to the Main Page</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
+    {% endif %}
 </div>
-</body>
-</html>
+{% endblock %}
