--- a/templates/Rango/add_category.html
+++ b/templates/Rango/add_category.html
@@ -1,19 +1,21 @@
 {% extends 'Rango/base.html' %}
 {% block title %}Add Category{% endblock %}
 {% block body_block %}
-    <h1>Add a Category</h1>
-    <div>
-        <form id="category_form" action="{% url 'rango:add_category' %}" method="post">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{  hidden }}
-            {% endfor %}
-            {% for visible in form.visible_fields %}
-                {{ visible.errors }}
-                {{ visible.help_text }}
-                {{ visible }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Create Category">
-        </form>
+    <link href="http://v4-alpha.getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+    <div class="jumbotron">
+        <h1 class="display-3">Add a new Category</h1>
     </div>
+    <form id="category_form" action="{% url 'rango:add_category' %}" method="post" class="form-signin" role="form">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+            {{  hidden }}
+        {% endfor %}
+        {% for visible in form.visible_fields %}
+            {{ visible.errors }}
+            {{ visible.help_text }}
+            {{ visible }}
+        {% endfor %}
+        <br>
+        <button class="btn btn-primary" type="submit" name="submit">Add Category</button>
+    </form>
 {% endblock %}
