--- a/templates/Rango/base.html
+++ b/templates/Rango/base.html
@@ -1,30 +1,101 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 {% load rango_template_tags %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango - {% block title %}Tango with Django{% endblock %}</title>
-</head>
-<body>
-{% block body_block %}{% endblock %}
-<div>
-    {% block sidebar_block %}
-        {% get_category_list category %}
-    {% endblock %}
-</div>
-<div>
-    <ul>
-        {% if user.is_authenticated %}
-            <li><a href="{% url 'rango:restricted' %}">Restrict</a></li>
-            <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
-            <li><a href="{% url 'rango:add_category' %}">Add a new Category</a></li>
-        {% else %}
-            <li><a href="{% url 'auth_login' %}">Login</a></li>
-            <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
-        {% endif %}
-        <li><a href="{% url 'rango:index' %}">Home</a></li>
-        <li><a href="{% url 'rango:about' %}">About</a></li>
-    </ul>
-</div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
+
+    <title>Rango - {% block title %} Tango with Django {% endblock %}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="http://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Rango</a>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'rango:index' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'rango:about' %}">About</a>
+          </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'rango:add_category' %}">Add Category</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'auth_password_change' %}">Change Password</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'rango:profile' user.username %}" class="nav-link">View Profile</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'rango:list_profiles' %}" class="nav-link">All Profiles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'auth_logout' %}?next=/rango/">LogOut</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'registration_register' %}">SignUp</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'auth_login' %}">LogIn</a>
+            </li>
+          {% endif %}
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <div class="container-fluid">
+      <div class="row">
+        <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+            <ul class="nav nav-list">
+                <li class="nav-header">
+                    Type to find a category
+                </li>
+                <form>
+                    <li>
+                        <input type="text" class="search-query form-control" name="suggestion" value="" id="suggestion">
+                    </li>
+                </form>
+            </ul>
+            <hr>
+            <div id="cats"></div>
+        </nav>
+
+        <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+            {% block body_block %}
+            {% endblock %}
+        </main>
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="http://v4-alpha.getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="{% static "js/rango-jquery.js" %}"></script>
+    <script src="{% static "js/rango-ajax.js" %}"></script>
+  </body>
 </html>
