--- a/templates/Rango/category.html
+++ b/templates/Rango/category.html
@@ -2,17 +2,55 @@
 {% block title %}{{ category.name }}{% endblock %}
 {% block body_block %}
 <div>
+    {% if user.is_authenticated %}
+        <form action="{% url 'rango:show_category' category.slug %}" class="form-inline" id="user_form" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <input type="text" class="form-control" size="50" name="query" {% if query %}value="{{ query }}"{% else %}value=""{% endif %} id="query">
+            </div>
+            <button class="btn btn-primary" type="submit" name="submit" value="Search">Search</button>
+        </form>
+        {% if result_list %}
+            <h3>Results</h3>
+            <div class="list-group">
+                {% for result in result_list %}
+                    <div class="list-group-item">
+                        <h4 class="list-group-item-heading">
+                            <a href="{{ result.url }}">{{ result.title }}</a>
+                        </h4>
+                        {% if user.is_authenticated %}
+                            <button class="rango-add btn btn-info btn-sm" type="button" data-catid="{{ category.id }}" data-url="{{ result.url }}" data-title="{{ result.title }}">
+                                Add
+                            </button>
+                        {% endif %}
+                        <br>
+                        <p class="list-group-item-text">{{ result.snippet }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endif %}
     {% if category %}
         <h1>{{ category.name }}</h1>
+        <div>
+        <strong id="like_count">{{ category.likes }}</strong> people like this category.
+        {% if user.is_authenticated %}
+            <button id="likes" data-catid="{{ category.id }}" class="btn btn-primary btn-sm" type="button">
+                Like
+            </button>
+        {% endif %}
+        </div>
+        <div id="pages">
             {% if pages %}
                 <ul>
                     {% for page in pages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                        <li><a href="{% url 'rango:goto' page.pk %}">{{ page.title }}</a></li>
                     {% endfor %}
                 </ul>
             {% else %}
                 <strong>No pages currently in category.</strong>
             {% endif %}
+        </div>
     {% else %}
         <strong>The specified category does not exist!</strong>
     {% endif %}
