--- a/templates/Rango/index.html
+++ b/templates/Rango/index.html
@@ -2,31 +2,45 @@
 {% load staticfiles %}
 {% block title %}Homepage{% endblock %}
 {% block body_block %}
-<div>
-    <strong>Last visit: {{ last_visit }}</strong>
+
+<div class="jumbotron">
     {% if user.is_authenticated %}
-    <h1>Welcome to Rango, {{ user.username }}!</h1>
+        <h1 class="display-3">Welcome to Rango, {{ user.username }}!</h1>
     {% else %}
-    <h1>Welcome to Rango!</h1>
+        <h1 class="display-3">Welcome to Rango, Partner!</h1>
     {% endif %}
-    {% if categories %}
-        <h2>Most Liked Categories</h2>
-        <ul>
-        {% for category in categories %}
-            <li><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <strong>There are not categories</strong>
-    {% endif %}
-    {% if top_five_pages %}
-        <h2>Most Viewed Pages</h2>
-        <ul>
-            {% for page in top_five_pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+    <p class="lead">Here you can observe everything you want.</p>
+</div>
+
+<div class="row marketing">
+    <div class="col-lg-6">
+    <h4>Most Liked Categories</h4>
+    <p>
+        {% if categories %}
+        <ul class="list-group">
+            {% for category in categories %}
+                <li class="list-group-item"><a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a></li>
             {% endfor %}
         </ul>
-    {% endif %}
+        {% else %}
+            <strong>There are no categories present</strong>
+        {% endif %}
+    </p>
+    </div>
+    <div class="col-lg-6">
+        <h4>Most Liked Pages</h4>
+        <p>
+            {% if top_five_pages %}
+                <ul class="list-group">
+                    {% for page in top_five_pages %}
+                        <li class="list-group-item"><a href="{% url 'rango:goto' page.pk %}">{{ page.title }}</a></li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no pages present</strong>
+            {% endif %}
+        </p>
+    </div>
 </div>
 <img src="{% static "images/rangos_girlfriend.jpg" %}" alt="Picture of Rango's girlfriend"/>
 {% endblock %}
