--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,18 @@
 {% extends 'Rango/base.html' %}
 {% block title %}Log in{% endblock %}
 {% block body_block %}
-    <h1>Log in</h1>
-    <form action="." method="post">
+    <link href="http://v4-alpha.getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+    <div class="jumbotron">
+        <h1 class="display-3">Log in</h1>
+    </div>
+    <form action="." method="post" class="form-signin" role="form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="log in">
-        <input type="hidden" value="{{ next }}" name="next">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputUsername" class="sr-only">Username</label>
+        <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" />Log in</button>
     </form>
     <strong>Not a member? <a href="{% url 'registration_register' %}">Register</a></strong>
 {% endblock %}
